[gd_scene load_steps=4 format=3 uid="uid://dgwwc726rr5xm"]

[ext_resource type="Script" path="res://Scenes/Menus/Pause/PauseMenu.gd" id="1_guwv5"]
[ext_resource type="Texture2D" uid="uid://bnv2rualkjx5o" path="res://Assets/Background/instructionsbook.png" id="2_y2yf3"]
[ext_resource type="Texture2D" uid="uid://xxylxcai3ahi" path="res://Assets/Background/instructionsbookdrawings1.png" id="3_dufq7"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_guwv5")

[node name="Controls2" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Controls2"]
scale = Vector2(7.2, 7.2)
texture = ExtResource("2_y2yf3")
offset = Vector2(80, 45)

[node name="Sprite2D2" type="Sprite2D" parent="Controls2"]
modulate = Color(0.772549, 0.760784, 0.74902, 1)
position = Vector2(580, 334)
scale = Vector2(7.06452, 7.11528)
texture = ExtResource("3_dufq7")

[node name="Label" type="Label" parent="Controls2"]
modulate = Color(0.47451, 0.380392, 0.290196, 1)
offset_left = 133.0
offset_top = 124.0
offset_right = 306.0
offset_bottom = 139.0
text = "WASD - Main Movement"

[node name="Label4" type="Label" parent="Controls2"]
modulate = Color(0.47451, 0.380392, 0.290196, 1)
offset_left = 122.0
offset_top = 345.0
offset_right = 295.0
offset_bottom = 360.0
text = "WASD - Main Movement"

[node name="Label3" type="Label" parent="Controls2"]
modulate = Color(0.47451, 0.380392, 0.290196, 1)
offset_left = 145.0
offset_top = 435.0
offset_right = 350.0
offset_bottom = 450.0
text = "Scroll Wheel - Change Mode"

[node name="Label5" type="Label" parent="Controls2"]
modulate = Color(0.47451, 0.380392, 0.290196, 1)
offset_left = 782.0
offset_top = 117.0
offset_right = 987.0
offset_bottom = 132.0
text = "Attack Controls"

[node name="Label12" type="Label" parent="Controls2"]
modulate = Color(0.47451, 0.380392, 0.290196, 1)
offset_left = 627.0
offset_top = 323.0
offset_right = 832.0
offset_bottom = 338.0
text = "Build Controls
"

[node name="Label6" type="Label" parent="Controls2"]
modulate = Color(0.47451, 0.380392, 0.290196, 1)
offset_left = 200.0
offset_top = 83.0
offset_right = 405.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 20
text = "MAIN CONTROLS"
horizontal_alignment = 1

[node name="Label7" type="Label" parent="Controls2"]
modulate = Color(0.47451, 0.380392, 0.290196, 1)
offset_left = 736.0
offset_top = 91.0
offset_right = 941.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 20
text = "MODE CONTROLS"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Controls2"]
modulate = Color(0.47451, 0.380392, 0.290196, 1)
offset_left = 135.0
offset_top = 173.0
offset_right = 334.0
offset_bottom = 224.0
text = "Shift - Dash
This will result in a loss of 
Stamina"
horizontal_alignment = 1

[node name="Label9" type="Label" parent="Controls2"]
modulate = Color(0.768627, 0.658824, 0.552941, 1)
offset_left = 115.0
offset_top = 252.0
offset_right = 331.0
offset_bottom = 321.0
text = "Ants are very mobile and can
get around very easily. Using 
their six limps they can
get from point A to B."

[node name="Label11" type="Label" parent="Controls2"]
modulate = Color(0.768627, 0.658824, 0.552941, 1)
offset_left = 112.0
offset_top = 389.0
offset_right = 441.0
offset_bottom = 458.0
text = "Ants are always either building, or 
Fighting. Its what they do."

[node name="Label10" type="Label" parent="Controls2"]
modulate = Color(0.768627, 0.658824, 0.552941, 1)
offset_left = 647.0
offset_top = 216.0
offset_right = 985.0
offset_bottom = 285.0
text = "Ants Have Several ways to defend themselves. 
Often they can shoot venomous spit bullets.
Othertimes, use their head to fight enemies."

[node name="Label8" type="Label" parent="Controls2"]
modulate = Color(0.47451, 0.380392, 0.290196, 1)
offset_left = 673.0
offset_top = 278.0
offset_right = 978.0
offset_bottom = 329.0
text = "Left Click - Shoots Venomous Spit Bullets
Right Click - Ant Head Punt"
horizontal_alignment = 1

[node name="Label13" type="Label" parent="Controls2"]
modulate = Color(0.47451, 0.380392, 0.290196, 1)
offset_left = 608.0
offset_top = 346.0
offset_right = 1022.0
offset_bottom = 505.0
scale = Vector2(0.962431, 0.895935)
theme_override_font_sizes/font_size = 15
text = "In Delete Mode - 
     Right Click - Deletes 
     the selected Block

In Build Mode -
     Tab - change the
     selected block

	     Right Click - Build"

[node name="MarginContainer" type="MarginContainer" parent="Controls2"]
offset_left = 461.0
offset_top = 570.0
offset_right = 611.0
offset_bottom = 595.0
scale = Vector2(1.5, 1.5)

[node name="VBoxContainer" type="VBoxContainer" parent="Controls2/MarginContainer"]
texture_filter = 1
layout_mode = 2

[node name="Back" type="Button" parent="Controls2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Back"

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 330.0
offset_top = 261.0
offset_right = 630.0
offset_bottom = 370.0
scale = Vector2(1.5, 1.5)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Resume
"

[node name="Controls" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Controls"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit
"

[node name="Menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Return To Menu"

[connection signal="pressed" from="Controls2/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
